--- a/index.html
+++ b/index.html
@@ -15,9 +15,15 @@
       />
       <input type="submit" value="Log In" />
     </form>
+    <h2 id="clock">00:00:00</h2>
     <h1 id="greeting" class="hidden"></h1>
-    <h2 id="clock"></h2>
+    <div id="quote">
+      <span></span>
+      <span></span>
+    </div>
     <script type="text/javascript" src="js/greetings.js"></script>
     <script type="text/javascript" src="js/clock.js"></script>
+    <script type="text/javascript" src="js/quotes.js"></script>
+    <script type="text/javascript" src="js/background.js"></script>
   </body>
 </html>
