--- a/index.html
+++ b/index.html
@@ -1,49 +1,43 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="css/style.css" />
-    <title>Momentum App</title>
-  </head>
-  <body>
-    <div class="vertical-center">
-      <form id="login-form" class="hidden">
-        <input
-          required
-          maxlength="15"
-          type="text"
-          placeholder="What is your name?"
-        />
-        <input type="submit" value="Log In" />
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="stylesheet" href="css/style.css" />
+  <title>Momentum App</title>
+</head>
+
+<body>
+  <div class="vertical-center">
+    <form id="login-form" class="hidden">
+      <input required maxlength="15" type="text" placeholder="What is your name?" />
+      <input type="submit" value="Log In" />
+    </form>
+    <div id="weather">
+      <span class="kr-font"></span>
+      <span></span>
+      <span class="hidden"></span>
+    </div>
+    <h2 id="clock">00:00:00</h2>
+    <h1 id="greeting" class="hidden"></h1>
+    <div id="todo-box" class="hidden">
+      <form id="todo-form">
+        <input type="text" placeholder="Write a To Do and Press Enter" required />
       </form>
-      <div id="weather">
-        <span class="kr-font"></span>
-        <span></span>
-        <span class="hidden"></span>
-      </div>
-      <h2 id="clock">00:00:00</h2>
-      <h1 id="greeting" class="hidden"></h1>
-      <div id="todo-box" class="hidden">
-        <form id="todo-form">
-          <input
-            type="text"
-            placeholder="Write a To Do and Press Enter"
-            required
-          />
-        </form>
-        <ul id="todo-list"></ul>
-      </div>
+      <ul id="todo-list"></ul>
     </div>
-    <div id="quote">
-      <span></span>
-      <span></span>
-    </div>
-    <script type="text/javascript" src="js/key.js"></script>
-    <script type="text/javascript" src="js/greetings.js"></script>
-    <script type="text/javascript" src="js/clock.js"></script>
-    <script type="text/javascript" src="js/quotes.js"></script>
-    <script type="text/javascript" src="js/background.js"></script>
-    <script type="text/javascript" src="js/todo.js"></script>
-    <script type="text/javascript" src="js/weather.js"></script>
-  </body>
+  </div>
+  <div id="quote">
+    <span></span>
+    <span></span>
+  </div>
+  <script type="text/javascript" src="js/key.js"></script>
+  <script type="text/javascript" src="js/greetings.js"></script>
+  <script type="text/javascript" src="js/clock.js"></script>
+  <script type="text/javascript" src="js/quotes.js"></script>
+  <script type="text/javascript" src="js/background.js"></script>
+  <script type="text/javascript" src="js/todo.js"></script>
+  <script type="text/javascript" src="js/weather.js"></script>
+</body>
+
 </html>
