[ADD] logout 기능 & checked 상태저장

--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
       <span class="hidden"></span>
     </div>
     <h2 id="clock">00:00:00</h2>
-    <h1 id="greeting" class="hidden"></h1>
+    <div id="greeting" class="hidden">
+      <div></div>
+      <button>
+        <img src="images/ic_logout.png" width="20px" height="20px" />
+      </button>
+    </div>
     <div id="todo-box" class="hidden">
       <form id="todo-form">
         <input type="text" placeholder="Write a To Do and Press Enter" required />
